Fixed task box margins overlapping

--- a/src/client/style.css
+++ b/src/client/style.css
@@ -90,8 +90,9 @@ a {
   width: 100%;
   min-width: 300px;
   min-height: 50px;
-  height: auto;
   margin-top: 20px;
+  height: auto;
+  margin-bottom: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -100,13 +101,16 @@ a {
 .task {
   width: 100%;
   height: 100%;
+  height: auto;
   margin: 10px;
+  padding: 1px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   min-width: 200px;
   min-height: 100px;
   flex-wrap: wrap;
+  align-items: flex-start;
 }
 
 .tasktitle {
